# ecen629_student

./: .gitignore
asst1/easygl/: CMakeLists.txt  graphics.cpp
asst1/scripts/: gen_design.py
asst1/src/: CMakeLists.txt  Design.cpp  Design.h  Drawer.cpp  Drawer.h  FPGA.cpp  FPGA.h  FpgaTile.h  Net.h  RRNode.cpp  Router.h  asst1.cpp
asst_placement/circuits/: cct5
asst_placement/src/: Block.cpp  CMakeLists.txt  Design.cpp  Design.h
asst_routing/: CMakeLists.txt
asst_routing/src/: CMakeLists.txt  Design.h  FPGA.cpp  FPGA.h  FpgaTile.cpp  Net.cpp  Net.h  RRNode.h  Router.cpp  asst_routing.cpp  utils.h
partitioner/: CMakeLists.txt
partitioner/circuits/: cc.txt  cct1  cct2  cct3  cct4  cm138a.txt  cm150a.txt  cm162a.txt  cm82a.txt  con1.txt  synth100  synth500  synth5000  twocm.txt  ugly16.txt  ugly8.txt  z4ml.txt
partitioner/scripts/: gen_design.py  run.py
partitioner/src/: Block.cpp  Block.h  CMakeLists.txt  Chromosome.cpp  Chromosome.h  Design.cpp  Design.h  GeneticPartitioner.cpp  GeneticPartitioner.h  Net.cpp  Net.h  partitioner_main.cpp  utils.h
placer/: CMakeLists.txt
placer/circuits/: cct1  huge.txt  lg1.txt  lg2.txt  med1.txt  med2.txt  small.txt  xl.txt
placer/easygl/: CMakeLists.txt  graphics.cpp
placer/scripts/: gen_design.py  gen_designs.sh  run_designs.py
placer/src/: APEdge.cpp  APEdge.h  Block.cpp  Block.h  CMakeLists.txt  Design.cpp  Design.h  Drawer.cpp  Drawer.h  FPGA.cpp  FPGA.h  Net.cpp  Net.h  placer_main.cpp
router/: CMakeLists.txt
router/scripts/: run_designs.py
router/src/: CMakeLists.txt  Design.cpp  Drawer.cpp  FPGA.h  (+11 more)
